[package]
name = "NovaLdr"
version = "7.10.2023"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.


[dependencies]
obfstr = "0.3.0"
ntapi = { version =  "0.4.1", features =[]}
rust_syscalls = {git = "https://github.com/janoglezcampos/rust_syscalls", features = ["_INDIRECT_"]}
winapi = { version = "0.3.9", features =["ntdef", "ntstatus", "minwindef", "winnt", "memoryapi", "processthreadsapi", "handleapi", "winbase"]  }
memoffset = "0.6"
litcrypt = "0.3"
widestring = "0.5.1"
rand = "0.8.0"

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
]
